syntax = "proto3";

service ClientTransactionService {
  rpc TxSubmit(TransactionRequest) returns (TransactionResponse);
}

service ClientStatusService {
  rpc Status(StatusRequest) returns (StatusResponse);
}

message DadInt {
  string key = 1;
  int64 value = 2;
}

message TransactionRequest {
  string clientId = 1;
  repeated string objectsToRead = 2;
  repeated DadInt objectsToWrite = 3;
}

message TransactionResponse {
  repeated DadInt objectsRead = 1;
}

message StatusRequest {
}

message StatusResponse {
  bool status = 1;
}
